# WFC

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  Game.cpp  Game.h  Handle.cpp  Handle.h  README.md  TextureWrap.cpp  TextureWrap.h  Tile.cpp  Tile.h  TileGrid.cpp  TileGrid.h  TileManager.cpp  TileManager.h  WFC.cpp  WFC.h  main.cpp
examples/: circles  circuit  colorful_triangles
tilesets/circles/: rules
tilesets/circuit/: rules
tilesets/colorful_triangles/: rules
tilesets/colorful_triangles/temp/: rules
tilesets/hexagons/: rules
tilesets/pipes/: rules
tilesets/triangles/: rules
